--- a/Challenges/Cipher2BaN9qbtd3h.html
+++ b/Challenges/Cipher2BaN9qbtd3h.html
@@ -56,10 +56,11 @@
 
     <section class="py-5 text-center container">
       <div class="row py-lg-5">
-        <div class="col-lg-6 col-md-8 mx-auto">
+        <div class="col-lg-8 col-md-8 mx-auto">
           <h1 class="fw-light" style="color:black; font-size: 72px;">Fallen Phrase Challenge</h1>
+          <br><br>
           <p class="" style="color:black; font-size: 24px;">
-Instructions: In this challenge you will need to complete the phrase on the board. The letters of the phrase on the board felt on the ground. You have to put the letters back on the board in the correct order. Luckily the letters felt directly under the column as they were on the board.
+Instructions: In this challenge you will need to complete the phrase on the board. The letters of the phrase on the board felt on the ground. You have to put the letters back on the board in the correct order. Luckily the letters fell directly under the column as they were on the board.
 You will need to complete the phrase and grab the word that is highlighted in the red box. Once you figure out the word, type it in the input below. If the word is correct, you will redirected to the next puzzle. If it's incorrect, it will let you know and you will have to try again.
           </p>
 
@@ -95,9 +96,8 @@ You will need to complete the phrase and grab the word that is highlighted in th
       <p class="float-end mb-1">
         <a href="#">Back to top</a>
       </p>
-      <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-      <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a
-          href="../getting-started/introduction/">getting started guide</a>.</p>
+      <p class="mb-1">Atos ® - Cloud Enterprise Solutions</p>
+      <p class="mb-1">Cross Cloud Functional Services - CodeWars</p>
     </div>
   </footer>
 
