--- a/Challenges/LeetCode.html
+++ b/Challenges/LeetCode.html
@@ -52,13 +52,15 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light" style="color:black; font-size: 72px;">Leet Code Challenge</h1>
+        <br><br>
         <p class="" style="color:black; font-size: 24px;">
-          Follow the link below and it will redirect you to the LeetCode website. Inside, you will need to complete the challenge. Once you are done, please take a screenshot and upload it to the team's breakout chat
+          Follow the link below and it will redirect you to the LeetCode website. Inside, you will need to complete the challenge. Once you are done, please take a screenshot and upload it to the team's breakout chat.
 </p>
       </div>
     </div>
   </section>
-  <div class="album py-5" style="background-color: #5AB9EA; height:500px">
+  <div class="album py-2" style="background-color: #5AB9EA; height:
+  300px">
     <div style="display: flex;
           justify-content: center;">
       <Button style="width: 300px; height:50px; font-size: 24px;"><a href="https://leetcode.com/problems/rotate-image/">Go to LeetCode Challenge</a></Button>
@@ -67,13 +69,13 @@
 
 </main>
 
-<footer class="text-muted py-5">
+<footer class="text-muted py-5" style="background-color: white;">
   <div class="container">
     <p class="float-end mb-1">
       <a href="#">Back to top</a>
     </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
+    <p class="mb-1">Atos ® - Cloud Enterprise Solutions</p>
+    <p class="mb-1">Cross Cloud Functional Services - CodeWars</p>
   </div>
 </footer>
 
