--- a/Challenges/htmlChallenge.html
+++ b/Challenges/htmlChallenge.html
@@ -53,14 +53,15 @@
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light" style="color:black; font-size: 72px;">HTML Challenge</h1>
         <p class="" style="color:black; font-size: 24px;">
-Instructions: There are many buttons inside this webpage. Only one will take you into the next step of the challenge. Good luck finding it.
+          <br>
+Instructions: There are many buttons inside this webpage. Only one will take you into the next step of the challenge. Good luck finding it!!
        </p>
 
       </div>
     </div>
   </section>
 
-  <div class="album py-5"  style="background-color: #5AB9EA ">
+  <div class="album py-2"  style="background-color: #5AB9EA ">
     <div class="container">
       <button class = "buttonCard" style="margin: 20px;"><h3><a href="htmlChallenge.html">Click Me!</a></h3></button>
             <button class = "buttonCard" style="margin: 20px;"><h3><a href="htmlChallenge.html">Click Me!</a></h3></button>
@@ -1018,8 +1019,8 @@ Instructions: There are many buttons inside this webpage. Only one will take you
     <p class="float-end mb-1">
       <a href="#">Back to top</a>
     </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
+    <p class="mb-1">Atos ® - Cloud Enterprise Solutions</p>
+    <p class="mb-1">Cross Cloud Functional Services - CodeWars</p>
   </div>
 </footer>
 
