--- a/Challenges/htmlChallenge4Vva52GDmtR.html
+++ b/Challenges/htmlChallenge4Vva52GDmtR.html
@@ -50,8 +50,9 @@
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
-      <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light" style="color:black; font-size: 72px;">Congratulations! You completed the HTML challenge</h1>
+      <div class="col-lg-8 col-md-8 mx-auto">
+        <h1 class="fw-light" style="color:black; font-size: 72px;">Congratulations!!</h1>
+          <h1 class="fw-light" style="color:black; font-size: 60px;">You completed the HTML challenge!</h1>
         <!-- <p class="lead text-muted">
 Cipher Challenge instructions        
 </p> -->
@@ -59,31 +60,43 @@ Cipher Challenge instructions
     </div>
   </section>
 
-  <div class="album py-5" style="background-color: #5AB9EA ">
-    <div class="container">
-        
-        <h1>The hidden phrase is: The Paris 2024 Olympic and Paralympic Games will be the biggest event ever organised in France. </h1>
+  <div class="album py-1 " style="background-color: #5AB9EA; height:auto">
+    <div class="container" style="padding-bottom:20px;">
+      <div class="row">
+        <div class="col-lg-6 col-md-3 mx-auto">
+          <image src="../Pictures/paris-2024.jpg" style="height:auto; width:auto" />
+        </div>
+        <div class="col-lg-6 col-md-3 mx-auto">
+          <h1>The hidden phrase is:</h1>
+          <br>
+          <h1>The Paris 2024 Olympic and Paralympic Games will be the biggest event ever organised in France.</h1>
+
+        </div>
+      </div>
 
     </div>
   </div>
 
+
 </main>
 
-<footer class="text-muted py-5">
-  <div class="container">
-    <p class="float-end mb-1">
-      <a href="#">Back to top</a>
-    </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
-  </div>
-</footer>
+
+
 
 
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 
       
   </body>
+  <footer class="text-muted" style="padding-top:140px; padding-bottom:30px;">
+    <div class="container">
+      <p class="float-end mb-1">
+        <a href="#">Back to top</a>
+      </p>
+      <p class="mb-1">Atos ® - Cloud Enterprise Solutions</p>
+      <p class="mb-1">Cross Cloud Functional Services - CodeWars</p>
+    </div>
+  </footer>
 </html>
 
 
