--- a/Challenges/postbook.html
+++ b/Challenges/postbook.html
@@ -50,9 +50,10 @@
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
-      <div class="col-lg-6 col-md-8 mx-auto">
+      <div class="col-lg-8 col-md-8 mx-auto">
         <h1 class="fw-light" style="color:black; font-size: 72px;">Hacker 101 - Postbook</h1>
-        <p class="" style="color:black; font-size: 24px;">
+      <br><br>  
+      <p class="" style="color:black; font-size: 24px;">
 Follow the link below and it will redirect you to the hacker 101 website. Inside, you will need to enter the credentials we will give you.
 Your task is to complete the first challenge: "Postbook"
 </p>
@@ -90,7 +91,15 @@ Your task is to complete the first challenge: "Postbook"
 
     <link rel="stylesheet" href="./CodeWar.css">
 
-
+    <footer class="text-muted py-5" style="background-color: white;">
+      <div class="container">
+        <p class="float-end mb-1">
+          <a href="#">Back to top</a>
+        </p>
+        <p class="mb-1">Atos ® - Cloud Enterprise Solutions</p>
+        <p class="mb-1">Cross Cloud Functional Services - CodeWars</p>
+      </div>
+    </footer>
 
 </head>
 
