--- a/Challenges/started.html
+++ b/Challenges/started.html
@@ -50,45 +50,24 @@
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
-      <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light" style="color:black; font-size: 72px;">HTML Challenge</h1>
+      <div class="col-lg-8 col-md-8 mx-auto">
+        <h1 class="fw-light" style="color:black; font-size: 72px;">Hacker 101 - Getting started</h1>
+        <br><br>
         <p class="" style="color:black; font-size: 24px;">
-          <br>
-Instructions: There is a hidden button inside this webpage. The task is to find it and click it to advance to the next step of the challenge.
-       </p>
-
+          Follow the link below and it will redirect you to the hacker 101 website. Inside, you will need to enter the credentials we will give you.
+          Your task is to complete the first challenge: "We are only getting started"</p>
       </div>
     </div>
   </section>
 
-  <div class="album py-5" style="height: 1000px; background-color: #5AB9EA">
-    <!-- <div class="container"> -->
-
-            <form enctype="multipart/form-data" method="post"
-            action="https://us-central1-al1x-cat-development-20023.cloudfunctions.net/code_wars_hidden_button">
-            <input type="submit" value="Click Me!" style="display:none;">
-          </form>
-    <!-- </div> -->
+  <div class="album py-5" style="background-color: #5AB9EA; height:300px">
+    <div style="display: flex;
+          justify-content: center;">
+      <Button style="width: 300px; height:50px; font-size: 24px;"><a href="https://ctf.hacker101.com/">Go to Hacker 101</a></Button>
+    </div>  
   </div>
 
 </main>
-
-<footer class="text-muted py-5">
-  <div class="container">
-    <p class="float-end mb-1">
-      <a href="#">Back to top</a>
-    </p>
-    <p class="mb-1">Atos ® - Cloud Enterprise Solutions</p>
-    <p class="mb-1">Cross Cloud Functional Services - CodeWars</p>
-  </div>
-</footer>
-
-
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-
-      
-  </body>
-</html>
 
 
 <!-- <!doctype html>
@@ -112,7 +91,15 @@ Instructions: There is a hidden button inside this webpage. The task is to find 
     <link rel="stylesheet" href="./CodeWar.css">
 
 
-
+    <footer class="text-muted py-5" style="background-color: white;">
+      <div class="container">
+        <p class="float-end mb-1">
+          <a href="#">Back to top</a>
+        </p>
+        <p class="mb-1">Atos ® - Cloud Enterprise Solutions</p>
+        <p class="mb-1">Cross Cloud Functional Services - CodeWars</p>
+      </div>
+    </footer>
 </head>
 
 <!-- <body style="background-color: #b8c0c2"> -->
