--- a/Challenges/Cipher1.html
+++ b/Challenges/Cipher1.html
@@ -133,14 +133,4 @@ Instructions: In this challenge you will need to figure out a secret phrase or w
 </head>
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js" integrity="sha384-qlmct0AOBiA2VPZkMY3+2WqkHtIQ9lSdAsAn5RUJD/3vA5MKDgSGcdmIv4ycVxyn" crossorigin="anonymous"></script><script>
-  $('#myForm')
-    .ajaxForm({
-        url : 'https://us-central1-al1x-cat-development-20023.cloudfunctions.net/code_wars_cipher_1', // or whatever
-        dataType : 'form',
-        success : function (response) {
-            alert("The server says: " + response);
-        }
-    })
-;
-</script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js" integrity="sha384-qlmct0AOBiA2VPZkMY3+2WqkHtIQ9lSdAsAn5RUJD/3vA5MKDgSGcdmIv4ycVxyn" crossorigin="anonymous"></script>
