--- a/Challenges/Cipher3kciU97gOWu.html
+++ b/Challenges/Cipher3kciU97gOWu.html
@@ -56,10 +56,11 @@
 
     <section class="py-5 text-center container">
       <div class="row py-lg-5">
-        <div class="col-lg-6 col-md-8 mx-auto">
+        <div class="col-lg-8 col-md-8 mx-auto">
           <h1 class="fw-light" style="color:black; font-size: 72px;">Beaver Code Challenge</h1>
+          <br><br>
           <p class="" style="color:black; font-size: 24px;">
-  Instructions: In this challenge you will need to figure out the word that makes up the Ciphertext (shown below). You will need to construct the word back to it's original form. You can see the example below. 
+  Instructions: In this challenge you will need to figure out the word that makes up the Ciphertext (shown below). You will need to construct the word back to its original form. You can see the example below. 
   Once you figure out the word, type it in the input below. If the word is correct, you will redirected to the next puzzle. If it's incorrect, it will let you know and you will have to try again.
           </p>
         </div>
@@ -105,9 +106,8 @@
       <p class="float-end mb-1">
         <a href="#">Back to top</a>
       </p>
-      <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-      <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a
-          href="../getting-started/introduction/">getting started guide</a>.</p>
+      <p class="mb-1">Atos ® - Cloud Enterprise Solutions</p>
+      <p class="mb-1">Cross Cloud Functional Services - CodeWars</p>
     </div>
   </footer>
 
