--- a/Challenges/htmlChallenge3xziMRyHqTA.html
+++ b/Challenges/htmlChallenge3xziMRyHqTA.html
@@ -92,8 +92,8 @@ Instructions: Good luck clicking the button!
     <p class="float-end mb-1">
       <a href="#">Back to top</a>
     </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
+    <p class="mb-1">Atos ® - Cloud Enterprise Solutions</p>
+    <p class="mb-1">Cross Cloud Functional Services - CodeWars</p>
   </div>
 </footer>
 
