--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@ Each challenge is worth 10 pts and you can earn 5 bonus points if your team is t
             </button>
         </div>
         <div class="col">
-            <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/SQL.html">
+            <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/started.html">
                 <img src="./Pictures/metadata.png" style="width:75px; height:75px;">
                 <h3>Hacker 101 CTF - Getting started</h3></a>
             </button>
         </div>
         <div class="col">
-            <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/Asterisk.html">
+            <button class = "buttonCard" style="margin-left: 20px; margin-right: 20px;"><a href="./Challenges/postbook.html">
                 <img src="./Pictures/metadata.png" style="width:75px; height:75px;">
                 <h3>Hacker 101 CTF - Postbook</h3></a>
             </button>
