instructions for hacker 101

--- a/Challenges/postbook.html
+++ b/Challenges/postbook.html
@@ -57,6 +57,10 @@
 Follow the link below and it will redirect you to the hacker 101 website. Inside, you will need to enter the credentials we will give you.
 Your task is to complete the first challenge: "Postbook"
 </p>
+      <p class="" style="color:black; font-size: 24px;">
+We are looking for two flags. The first flag you will find once you log in to Postbook inside the sandbox. Hint, you will have to guess the username and password. You will then find the
+second flag inside the "Myprofile" page.
+</p>
       </div>
     </div>
   </section>
