LeetCode Golang 5 extra points

--- a/Challenges/LeetCode.html
+++ b/Challenges/LeetCode.html
@@ -56,6 +56,9 @@
         <p class="" style="color:black; font-size: 24px;">
           Follow the link below and it will redirect you to the LeetCode website. Inside, you will need to complete the challenge. Once you are done, please take a screenshot and upload it to the team's breakout chat.
 </p>
+        <p class="" style="color:black; font-size: 24px;">
+If your team is able to complete the challenge in Golang, your team will be rewarded 5 extra points
+</p>
       </div>
     </div>
   </section>
